Version: 1.6.0
Date: 1/2/26
  Minor Features:
    - Added command /disable-quest, which lets you skip a quest in the progression path.  For example, "/disable-quest biter-rammer" to avoid having to ram biters with vehicles to progress.
        Note that this also permanently makes its specific rewards unobtainable.  To skip and get the rewards, use "/complete-quest <quest>".
  Changes:
    - Disabled the original method of ranking up items to red stars (destroy your ship outside of the solar system while carrying hextreme items).
    - Removed the mod setting for default trade quality bounds.
    - Trades now only use a single quality at a time.
    - Teleporting to a hex core adjacent to a dungeon now requires confirmation (pressing hotkey/button again to confirm).
    - Strongboxes are now removed if the "parent" hex core is deleted.
  Balancing:
    - Added mod setting that toggles the allowance of two-headed trains in trading.
    - Changed the default value for the base trade efficiency setting from 1.0 to 0.8, where at least 25% trade productivity is required to create infinite coin loops.
    - If the "Electrocution" quest is revealed but not yet completed, then the next lightning strike that hits your character will now call for Fulgora's magnificent storms to finish the job.
  Bugfixes:
    - Fixed the game crashing upon destroying your car and a biter/spitter spawner in the same collision.
    - Fixed that disconnecting from a server (losing connection, being kicked, force-quitting, etc.) was teleporting you to your remote view location upon rejoining.
    - Fixed that the claim hexes tool wasn't taking coins from the piggy bank when in remote view.
    - Fixed that sometimes a hex core's GUI wouldn't update when one of its trades is made.
    - Fixed that quests specifying a damage type were not using localization for the damage type.