@@ -1,0 +1,4 @@
+
+local toasts_gui = {}
+
+return toasts_gui
