@@ -148,6 +148,7 @@ hextorio-default-gleba-hexlight-color=[planet=gleba] Default Hexlight Color
 hextorio-default-aquilo-hexlight-color=[planet=aquilo] Default Hexlight Color
 hextorio-strongbox-spawn-chance=Strongbox Spawn Chance
 hextorio-strongbox-loot-scale=Strongbox Loot Scale
+hextorio-quest-completion-sound=Quest Completion Sound
 
 [mod-setting-description]
 hextorio-atomic-bomb-damage-multiplier=[img=utility.warning_icon] [font=heading-2][color=yellow]BALANCING OPTION[.color][.font]\n\nMultiplier to damage from [item=atomic-bomb]. If not nerfed, looting dungeons is too easy. Set to 1.0 for original damage.
@@ -298,6 +299,7 @@ hextorio-default-gleba-hexlight-color=Hex cores on [planet=gleba] glow vividly w
 hextorio-default-aquilo-hexlight-color=Hex cores on [planet=aquilo] glow vividly with this color unless overridden by a circuit network.
 hextorio-strongbox-spawn-chance=Chance for each hex to spawn a strongbox. These are like DPS milestone goals giving rewards.
 hextorio-strongbox-loot-scale=Multiplier to the loot value (coins or other things) for each victory against a strongbox.
+hextorio-quest-completion-sound=Each player hears only their own selection from this setting.
 
 [string-mod-setting]
 hextorio-grid-rotation-mode-nauvis-random=Random
@@ -320,6 +322,13 @@ hextorio-ore-generation-mode-along-edges=Along Edges
 hextorio-ore-generation-mode-center-square=Center Square
 hextorio-title-screen-music-vanilla=Vanilla
 hextorio-title-screen-music-a-soul-one-billion-years-from-now="A'kan, a Soul One Billion Years From Now"
+hextorio-quest-completion-sound-none=None
+hextorio-quest-completion-sound-piano=Piano
+hextorio-quest-completion-sound-console-message=Console Message
+hextorio-quest-completion-sound-research-completed=Research Completed
+hextorio-quest-completion-sound-game-won=Game Won
+hextorio-quest-completion-sound-game-lost=Game Lost
+hextorio-quest-completion-sound-alert=Alert
 
 [string-mod-setting-description]
 hextorio-grid-rotation-mode-nauvis-random=[planet=nauvis] gets a randomly rotated grid.
