@@ -1,0 +1,11 @@
+
+data:extend({
+    {
+        type = "sound",
+        name = "quest-completed",
+        filename = "__hextorio__/sound/quest-completed.ogg",
+        category = "game-effect", -- Game effects in sounds settings control the volume of this effect
+        priority = 10,
+        aggregation = {max_count = 1, remove = true},
+    }
+})
